# youtube-trends-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/youtube_trends_mcp/: __init__.py
